--- a/slackbook_user/templates/base/account.html
+++ b/slackbook_user/templates/base/account.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base-nav.html' %}
 
 {% block content %}
 
@@ -14,6 +14,8 @@
                 {% endif %}
                 
                 <span>{{ user.username }}</span>
+                <br>
+                <a href="{% url 'create-channel' %}">Create Channel</a>
                 {% if request.user == user %}
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -21,7 +23,6 @@
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                           {% for conversation in chat %}
-                          <!-- {{conversation.title}} -->
                             {% if conversation.host == user or conversation.title == user.username %}
                                 {% if conversation.host == user %}
                                     <a class="dropdown-item" href="{% url 'chat' conversation.id %}">{{conversation.title}}</a>
@@ -30,7 +31,7 @@
                                 {% endif %}
                             {% else %}
                                 {% ifchanged You have no current conversation. %}
-                                You have {{ forloop.counter0 }} current conversations.
+                                Your conversations: 
                                 {% endifchanged %}                  
                             {% endif %}
                           {% endfor %}
@@ -60,9 +61,8 @@
                     <div class="channel-content">
                         <h5><a href="{% url 'channel' topic.id %} ">{{topic.title}}</a></h5>
                         {% if request.user == topic.host %}
-                            <a href="{% url 'create-channel' %}">Create Channel</a>
-                            <a href="{% url 'update-channel' topic.id %}">Edit</a>
-                            <a href="{% url 'delete-channel' topic.id %}">Delete</a>
+                            <a href="{% url 'update-channel' topic.id %}"><i class="fas fa-edit"></i></a>
+                            <a href="{% url 'delete-channel' topic.id %}"><i class="fas fa-trash-alt"></i></a>
                         {% endif %}
                         <div class="channel-content channel-scroll-topics">
                             {% for comment in all_comments %}
@@ -82,49 +82,16 @@
                     <hr>
                     {% endfor %}
                 </div>
-
                 <div class="col-6" style="margin-left: -10px;">
-                    
-                    
-                
-                  
                     <div>
-                       
-
                     <h4>{{joined_count}} Joined Channels</h4>
-                    <!-- {% for comment in comments %}
-                    {% if comment.channel.host.username != user.username %}
-                    
                         
-                        <h5><a href="#">@{{comment.channel.host.username}}</a></h5>
-                        <h5><a href="#">{{comment.channel.title}}</a></h5>
-                        
-                        <div>
-                            <small><a href="#">@{{ comment.user.username }}</a> - {{ comment.created_on|timesince }} ago</small>
-                        </div>               
-                        <div>
-                            <div class="channel-content">
-                                <h5>{{ comment.body }}</h5>
-                                {% if comment.image %}
-                                    <img class="post-image" src="{{ comment.image.url }}" alt="post-image">
-                                {% endif %}
-                            </div>  
-                        </div>
-                        <a href="#"><i class="fas fa-user-friends"></i></a> {{ comment.channel.guests.count }} Members
-                        <span class="category-open"><small>{{ comment.channel.topic.title }}</small></span>
-                        <hr>
-                        
-                
-                    {% endif %}    
-                    {% endfor %} -->
-                    
                         <div>
                             {% for guest in guests %}
-                                <!-- {{guest}} -->
                                 {% if guest.host != user %}
                                     <div class="channel-content">
-                                        <h5><a href="#">{{guest.title}}</a></h5>                                 
-                                        <h6><a href="#">@{{guest.host.username}}</a></h6>                                 
+                                        <h5><a href="{% url 'channel' guest.id %}">{{guest.title}}</a></h5>                                 
+                                        <h6><a href="{% url 'channel' guest.host.id %}">@{{guest.host.username}}</a></h6>                                 
                                         {% for comment in comments %}
                                             {% if guest.title == comment.channel.title and comment.user == user %}
                                                 <small>@{{ comment.user.username }} - {{ comment.created_on|timesince }} ago</small>
