--- a/slackbook_user/templates/base/recently-active.html
+++ b/slackbook_user/templates/base/recently-active.html
@@ -4,36 +4,37 @@
 
 <div class="row">
     <div class="col-md-4 offset-md-4">
-        <div>
-            {% for user in queryset %}
-                    <div class="row main-content">         
-                        <div class="channel-content">
-                            <small><a href="{% url 'account' user.id %}">@{{ user.username }}</a></small>
-                            {% if user.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
-                                <img class="user-image" src="/static/images/avatar.png" alt="logo">
-                            {% else %}
-                                <img class="user-image" src="{{ user.avatar.url }}" alt="user-image">
-                            {% endif %}
-                            <br>
-                            {% for comment in user.post_set.all|slice:"1" %}
-                                {% if comment.channel and comment.channel.private == False %}
-                                commented {{ comment.created_on|timesince }} ago:
-                                <br>
-                                <div class="channel-content">
-                                {{ comment.body }}
-                                </div>
-                                in Channel: <a href="{% url 'channel' comment.channel.id %}">{{comment.channel.title}}</a>
+        <div class="channel-content">
+            <h3><a href="{% url 'recently-active' %}"><i class="fas fa-arrow-alt-circle-left"></i></a></h3>
+            {% if user_count == 0 %}
+                <h4 class="bad-news">Sorry! Your query returned 0 results.</h4>
+            {% else %}
+                {% for user in queryset %}
+                        <div class="row main-content"> 
+                            <div class="channel-content">
+                                <small><a href="{% url 'account' user.id %}">@{{ user.username }}</a></small>
+                                {% if user.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
+                                    <img class="user-image" src="/static/images/avatar.png" alt="logo">
+                                {% else %}
+                                    <img class="user-image" src="{{ user.avatar.url }}" alt="user-image">
                                 {% endif %}
-                            {% endfor %}
-                        </div>
-                        <br>
-                    </div>
-                    
-            {% endfor %}
-
-            
+                                <br>
+                                {% for comment in user.post_set.all|slice:"1" %}
+                                    {% if comment.channel and comment.channel.private == False %}
+                                    commented {{ comment.created_on|timesince }} ago:
+                                    <br>
+                                    <div class="channel-content">
+                                    {{ comment.body }}
+                                    </div>
+                                    in Channel: <a href="{% url 'channel' comment.channel.id %}">{{comment.channel.title}}</a>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                            <br>
+                        </div>                    
+                {% endfor %}
+            {% endif %}      
         </div>
-
     </div>
 </div>
 
