--- a/slackbook_user/templates/base/404.html
+++ b/slackbook_user/templates/base/404.html
@@ -32,7 +32,7 @@
                     <br>
                     <h4>Sorry!!! This page does not exist :(</h4>
                     <h3><a href="{{request.META.HTTP_REFERER}}"><i class="fas fa-arrow-alt-circle-left"></i></a></h3>
-                    <a class="navbar-brand" href="/"><img class="brand" src="/static/images/SlackBook-Logo.png" alt="logo"></a>
+                    <a class="navbar-brand" href="/"><img class="brand" src="{% static 'images/SlackBook-Logo.png' %}" alt="logo"></a>
                 </div>
             </div>
         </div>
