--- a/slackbook_user/templates/base/delete.html
+++ b/slackbook_user/templates/base/delete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base-nav.html' %}
 
 {% block content %}
     <div class="row text-white bg-dark main-content">
